# OS

./: .gdbinit  CMakeLists.txt  Makefile  README.md  boot_sect.asm  count_sectors.sh  kernel.h  kernel_entry.asm  linker.ld  prep.sh  qemu-launch.sh
32bit/: 32bit-gdt.asm
boot/: 32bit-gdt.asm  32bit-print.asm  boot_sect.asm  boot_sect_disk.asm  memory_map.asm  second_stage_boot.asm  second_stage_read_sectors.asm
disk/: boot_sect_disk.asm
print/: boot_sect_print.asm  boot_sect_print_hex.asm
programs/: shell.c  test.c  test_runner.c
programs/test_suite/: fifo_test.c  malloc_tests.c  process_scheduling_tests.c  semaphore_tests.c  test_helper.h  test_suite.h
src/: buffer_helpers.h  debug.h  gdt.asm  helpers.h  interrupts.h  io.c  io.h  io_ports.h  kernel  kernel.c  kernel.h  keyboard.c  list.c  list.h  meminfo.h  memory.c  memory.h  print.c  print.h  process.c  process.h  string.c  string.h  timer.c  timer.h  types.h
src/interrupt/: PIC.h  interrupt.c  interrupt.h  interrupt_handlers.asm  interrupt_handlers.c  interrupt_handlers.h
src/interrupt_handling/: PIC.h  interrupt_handlers.c  interrupt_handlers.h
src/memory/: kmalloc.c  meminfo.asm  meminfo.c  meminfo.h  memory.c  memory.h  physical_memory.c  physical_memory.h  virtual_heap.c  virtual_heap.h  virtual_memory.c  virtual_memory.h
src/old/: meminfo.h  memory.c  memory.h
src/peripherals/: io_ports.c  io_ports.h  keyboard.c  keyboard.h  timer.c  timer.h
src/processes/: context_switch.asm  context_switch.c  context_switch.h  device_process.c  device_process.h  periodic_process.c  periodic_process.h  process.c  process.h  process_internal.h  sporadic_process.c  sporadic_process.h  syscall.c  syscall.h
src/sync/: fifo.c  fifo.h  semaphore.c  semaphore.h
src/utility/: bitmap.c  bitmap.h  debug.h  helpers.h  list.c  list.h  math.h  memops.c  memops.h  print.c  print.h  rand.c  rand.h  string.c  string.h  types.h
test/: Makefile  MemoryTest.c
